# dataclasses-asdict-core

./: .cookiecutterrc  .gitignore  main.py  main_zzzeek.py  mydict.py  pyproject.toml  requirements.txt
src/dataclasses_asdict/: __init__.py  dataclass_child.py  dataclass_parent.py  map_sqlalchemy.py
tests/: test_dataclasses_asdict.py
